# OpenOT2

./: .gitignore  README.md  pyproject.toml
docs/: generate.html  index.html  simulator.html
examples/: basic_usage.py  complete_run.ipynb
openot2/: __init__.py  client.py  operations.py  precheck.py  utils.py
openot2/control/: __init__.py  graph_models.py  graph_runner.py  models.py  runner.py  store.py  web.py
openot2/control/templates/: base.html  calibration.html  index.html  run_detail.html
openot2/designer/: __init__.py  compiler.py  extensions.py  ir.py  validator.py  visualize.py
openot2/protocol/: __init__.py  executor.py  generator.py  recovery.py
openot2/task_api/: __init__.py  loader.py  models.py  plugin.py  registry.py
openot2/vision/: __init__.py  analyzers.py  camera.py  models.py
openot2/webapp/: __init__.py  __main__.py  app.py  calibration.py  deck.py  handlers.py  web.py
protocol/: __init__.py  executor.py  generator.py
tests/: conftest.py  test_client.py  test_control_calibration.py  test_control_models.py  test_control_runner.py  test_control_store.py  test_control_web.py  test_designer_extensions.py  test_designer_ir.py  test_designer_visualize.py  test_generator.py  test_hardware.py  test_importer_pd_json.py  test_precheck.py  test_protocol.py  test_step_binding.py  test_task_api.py  test_vision.py
vision/: __init__.py  analyzers.py  base_types.py  models.py
webapp/: __init__.py  __main__.py  app.py  calibration.py  handlers.py  web.py
webapp/templates/: base.html  calibration.html  generate.html  hardware.html
(+8 files in other folders)
