[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openot2"
version = "0.1.0"
description = "Modular framework for controlling OT-2 robots with ML/CV integration"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "pydantic>=2.0",
    "numpy>=1.24",
    "opencv-python-headless>=4.7",
    "openai>=1.0",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.0"]
supergradients = ["super-gradients>=3.1"]
calibration = ["pandas>=2.0", "scikit-learn>=1.2"]
all = ["openot2[yolo,supergradients,calibration]"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "responses>=0.23",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["openot2"]

[tool.pytest.ini_options]
markers = [
    "hardware: tests that require a real OT-2 robot (deselect with '-m not hardware')",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
